# vurf

./: .gitignore  LICENSE  README.md  build.sh  generate_completions.sh  pyproject.toml
automation/: README.md
automation/arch-linux/: install.sh  vurf-compare.sh  vurf.hook
automation/mac/: b2v.py
tests/: basic.vurf  conditionals.vurf  ellipses.vurf  quoted.vurf  simple.vurf  test_vurf.py
vurf/: __init__.py  cli.py  config.toml  constants.py  default.vurf  grammar.lark  lib.py  module.py  nodes.py  parser.py  test.vurf  transformer.py  types.py
vurf/defaults/: config.toml  packages.vurf
vurf/parser/: __init__.py  grammar.lark  indenter.py  transformer.py
vurf_completions/: completions.bash  completions.fish  completions.zsh
