[tool.poetry]
name = "vurf"
version = "0.1.0"
description = ""
authors = ["Viliam Valent <vurf@valent.email>"]

[tool.poetry.dependencies]
python = "^3.8"
lark = "^0.11.3"
click = "^8.0.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vurf = "vurf.cli:main"

