[tool.poetry]
name = "vurf"
version = "2.0.0"
description = "Viliam's Universal Requirements Format"
authors = ["Viliam Valent <vurf@valent.email>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ViliamV/vurf"
homepage = "https://github.com/ViliamV/vurf"
exclude = ["vurf/parser/grammar.lark"]
include = ["vurf/parser/stand_alone.py", "vurf_completions/*"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.0"
tomli = "<3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "*"
lark = "^1.0.0"
isort = "^5.10.1"
mypy = "^0.930"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vurf = "vurf.cli:main"

[tool.black]
line-length = 110
target-version = ['py38']

[tool.isort]
line_length = 110
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true

